style: обновить внешний вид страницы-заглушки

--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,13 +2,12 @@
     text-decoration: none;
     color: #4F5666;
     font-weight: 400;
-    font-style: italic;
     font-size: 20px;
-    transition: all ease .3s;
 }
 
 .footer__link:hover {
     color: #25BB5A;
+    transition: ease .3s;
 }
 
 @media screen and (max-width: 800px) {
