--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,6 +3,23 @@
     padding: 0;
     object-fit: cover;
     display: block;
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 800px;
+}
+
+@media screen and (max-width: 800px) {
+    .header__logo {
+        max-width: 600px;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    .header__logo {
+        max-width: 400px;
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .header__logo {
+        max-width: 300px;
+    }
 }
